Bug 435611 - QtWebKit, when used, does not honor KDE policy
Summary: QtWebKit, when used, does not honor KDE policy
Status: RESOLVED FIXED
Alias: None
Product: alkimia
Classification: Frameworks and Libraries
Component: General (other bugs)
Version First Reported In: 8.1.0
Platform: Other All
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-04-11 11:49 UTC by Ralf Habacker
Modified: 2021-04-11 15:31 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 8.1.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2021-04-11 11:49:14 UTC
SUMMARY

According to https://community.kde.org/Policies/API_to_Avoid#QNetworkAccessManager, if QNetworkAccessManager is used, the corresponding policy should be set, which is currently not the case. QNetworkAccessManager is used by QtWebKit, which is enabled if building with WebKit.

STEPS TO REPRODUCE
1. inspect alkimia and QtWebKit source for a call to QNetworkAccessManager::setRedirectPolicy()

OBSERVED RESULT
The mentioned method is not called.

EXPECTED RESULT
The mentioned method should be called with the approbiate parameter.

ADDITIONAL INFORMATION
The issue has been reported by Thomas Baumgart
Comment 1 Ralf Habacker 2021-04-11 11:54:13 UTC
Git commit 60dc7146947b69ce239fc0fa94c3e1730dd43125 by Ralf Habacker.
Committed on 11/04/2021 at 11:53.
Pushed by habacker into branch '8.1'.

Make QtWebkit follow redirects by default to comply with KDE policy
FIXED-IN: 8.1.1

M  +7    -1    src/alkwebpage.cpp

https://invent.kde.org/office/alkimia/commit/60dc7146947b69ce239fc0fa94c3e1730dd43125
Comment 2 Ralf Habacker 2021-04-11 15:31:13 UTC
Git commit 0424f114924cabd9dafe7225790be5ac5b410f06 by Ralf Habacker.
Committed on 11/04/2021 at 15:30.
Pushed by habacker into branch '8.1'.

Limit call to setRedirectPolicy() to supported Qt version >= 5.9

M  +2    -0    src/alkwebpage.cpp

https://invent.kde.org/office/alkimia/commit/0424f114924cabd9dafe7225790be5ac5b410f06