Make QtWebkit follow redirects by default to comply with KDE policy

BUG: 435611
FIXED-IN: 8.1.1